# wassel

./: .gitignore  Cargo.toml  README.md  justfile
adapters/wit/: plugin.wit
crates/cli/: Cargo.toml
crates/cli/src/: common.rs  main.rs  plugin.rs  stack.rs
crates/plugin-component/: Cargo.toml
crates/plugin-component/src/: config.rs  image.rs  instance.rs  lib.rs  meta.rs  state.rs
crates/plugin-stack/: Cargo.toml
crates/plugin-stack/src/: config.rs  errors.rs  lib.rs  response.rs  service.rs  stack.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  server.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
examples/python-plugin/: .gitignore  app.py  justfile  plugin.toml  wkg.toml
examples/python-plugin/wit/: plugin.wit
examples/rust-plugin/: Cargo.toml  justfile  plugin.toml
examples/rust-plugin/src/: lib.rs
examples/rust-plugin/wit/: deps.toml  plugin.wit
src/: config.rs  main.rs
src/plugin/: bindings.rs  errors.rs  http.rs  http_client.rs  mod.rs  pool.rs  state.rs
src/plugins/: bindings.rs  mod.rs  pool.rs  state.rs
src/server/: body.rs  errors.rs  mod.rs  response.rs  service.rs
wit/: deps.toml  http-client.wit  plugin.wit  wassel.wit
