[workspace]
members = []
resolver = "3"

[package]
name = "wassel-server"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
config = "0.15.19"
dashmap = "6.1.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
matchit = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-http = "41"
wasmtime-wasi-config = "41"
wit-bindgen = "0.52.0"
toml = "0.9.11"
