[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
wassel-plugin-component = { path = "crates/plugin-component" }
wassel-plugin-stack = { path = "crates/plugin-stack" }
wassel-server = { path = "crates/server" }
wassel-world = { path = "crates/world"}

anyhow = "1.0.100"
bytes = "1.11.1"
config = "0.15.19"
dashmap = "6.1.0"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
matchit = "0.9.1"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-config = "41"
wasmtime-wasi-http = "41"
wit-bindgen = "0.53.1"
